[gd_scene load_steps=47 format=3 uid="uid://c157take65vrq"]

[ext_resource type="Script" path="res://scenes/minigames/beat-baker/beat_baker.gd" id="1_wtce2"]
[ext_resource type="Script" path="res://scenes/minigames/beat-baker/fighter.gd" id="3_3syq4"]
[ext_resource type="Texture2D" uid="uid://unhunsxufee4" path="res://assets/sprites/shadow.png" id="4_vy88p"]
[ext_resource type="Texture2D" uid="uid://b4dkyjt1u13b7" path="res://assets/sprites/mini-main-character.png" id="5_holy3"]
[ext_resource type="Texture2D" uid="uid://bnhad81hd1flg" path="res://assets/sprites/boulanger-bresom-animation.png" id="6_jxvwi"]
[ext_resource type="Script" path="res://scenes/minigames/beat-baker/baker.gd" id="6_qlmur"]
[ext_resource type="PackedScene" uid="uid://4jv7jiyjgo8o" path="res://scenes/minigames/waking_up/container.tscn" id="7_8t10j"]
[ext_resource type="AudioStream" uid="uid://clnw4gdc31b3g" path="res://assets/audios/YES!!!!!!!!!!!!!!.ogg" id="11_8r4jl"]
[ext_resource type="AudioStream" uid="uid://tj7on42k5emi" path="res://assets/audios/SLAP SOUND EFFECT.ogg" id="11_u75in"]
[ext_resource type="Texture2D" uid="uid://dtqsaspdxn35w" path="res://assets/backgrounds/bakery.png" id="11_v0uxk"]
[ext_resource type="AudioStream" uid="uid://ccbj0rul60cub" path="res://assets/audios/throw.ogg" id="12_1ghqy"]
[ext_resource type="AudioStream" uid="uid://1iwhwqx1fegj" path="res://assets/audios/oh no.ogg" id="12_lfkss"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_pi482"]
a = Vector2(192, 0)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ojahn"]
b = Vector2(0, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci6ut"]
atlas = ExtResource("5_holy3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qgbj"]
atlas = ExtResource("5_holy3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6cr5"]
atlas = ExtResource("5_holy3")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4h15"]
atlas = ExtResource("5_holy3")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlu7p"]
atlas = ExtResource("5_holy3")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrkd7"]
atlas = ExtResource("5_holy3")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qebvm"]
atlas = ExtResource("5_holy3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_khiov"]
atlas = ExtResource("5_holy3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3bci"]
atlas = ExtResource("5_holy3")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ahw3"]
atlas = ExtResource("5_holy3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp85b"]
atlas = ExtResource("5_holy3")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_koye0"]
atlas = ExtResource("5_holy3")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_adwdf"]
atlas = ExtResource("5_holy3")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6abd"]
atlas = ExtResource("5_holy3")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8871l"]
atlas = ExtResource("5_holy3")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnxc5"]
atlas = ExtResource("5_holy3")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xtl1e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci6ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qgbj")
}],
"loop": true,
"name": &"Idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6cr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4h15")
}],
"loop": true,
"name": &"Idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlu7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrkd7")
}],
"loop": true,
"name": &"Idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qebvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khiov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3bci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ahw3")
}],
"loop": true,
"name": &"Walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp85b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koye0")
}],
"loop": true,
"name": &"Walk_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adwdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6abd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8871l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnxc5")
}],
"loop": true,
"name": &"Walk_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gsreu"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qyhig"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0nef3"]
atlas = ExtResource("6_jxvwi")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwkgn"]
atlas = ExtResource("6_jxvwi")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa8fu"]
atlas = ExtResource("6_jxvwi")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2757"]
atlas = ExtResource("6_jxvwi")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_71us4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nef3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwkgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa8fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2757")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_5hxg7"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fqc3g"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dtpf6"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jk1al"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_b5ukk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0576806]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}

[sub_resource type="Animation" id="Animation_6ubo7"]
resource_name = "text_moving"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0576806, -0.251236]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [50, 55, 50]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jbrdi"]
_data = {
"RESET": SubResource("Animation_b5ukk"),
"text_moving": SubResource("Animation_6ubo7")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_c8jtb"]
random_pitch = 1.5
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("12_1ghqy")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wtce2")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(10, 10)

[node name="Top-Border" type="StaticBody2D" parent="."]
position = Vector2(-96, -54)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top-Border"]
shape = SubResource("SegmentShape2D_pi482")

[node name="Bottom-Border" type="StaticBody2D" parent="."]
position = Vector2(-96, 54)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom-Border"]
shape = SubResource("SegmentShape2D_pi482")

[node name="Left-Border" type="StaticBody2D" parent="."]
position = Vector2(-96, -54)
collision_layer = 9
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left-Border"]
shape = SubResource("SegmentShape2D_ojahn")

[node name="Right-Border" type="StaticBody2D" parent="."]
position = Vector2(98, -54)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right-Border"]
position = Vector2(-25, 0)
shape = SubResource("SegmentShape2D_ojahn")

[node name="Fighter" type="CharacterBody2D" parent="."]
position = Vector2(-89, 0)
collision_layer = 10
collision_mask = 10
script = ExtResource("3_3syq4")

[node name="Shadow" type="Sprite2D" parent="Fighter"]
z_index = -5
position = Vector2(0, 7.5)
texture = ExtResource("4_vy88p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Fighter"]
sprite_frames = SubResource("SpriteFrames_xtl1e")
animation = &"Idle_down"
autoplay = "Idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fighter"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_gsreu")

[node name="Baker" type="Area2D" parent="."]
position = Vector2(88, 0)
collision_layer = 16
collision_mask = 16
script = ExtResource("6_qlmur")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Baker"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_qyhig")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Baker"]
sprite_frames = SubResource("SpriteFrames_71us4")
autoplay = "default"

[node name="Baker-Patern" parent="." instance=ExtResource("7_8t10j")]
position = Vector2(88, -40)
rotation = 1.5708
scale = Vector2(0.8, 0.1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOver" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="ColorRect" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="DiedMessage" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 474.0
offset_top = 385.0
offset_right = 1434.0
offset_bottom = 598.0
text = "Oof.. That's real PAIN"
label_settings = SubResource("LabelSettings_5hxg7")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ClickToContinue" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 500.0
offset_top = 985.0
offset_right = 1460.0
offset_bottom = 1067.0
text = "Click to continue"
label_settings = SubResource("LabelSettings_5hxg7")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Victory" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="ColorRect" parent="CanvasLayer/Victory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="CanvasLayer/Victory"]
layout_mode = 0
offset_left = 137.0
offset_top = 469.0
offset_right = 1723.0
offset_bottom = 610.0
text = "I sure hope you tasted my cream real good"
label_settings = SubResource("LabelSettings_fqc3g")
horizontal_alignment = 1

[node name="ClickToContinue" type="Label" parent="CanvasLayer/Victory"]
layout_mode = 0
offset_left = 500.0
offset_top = 985.0
offset_right = 1460.0
offset_bottom = 1067.0
text = "Click to continue"
label_settings = SubResource("LabelSettings_dtpf6")
horizontal_alignment = 1
autowrap_mode = 2

[node name="IndicationText" type="Label" parent="CanvasLayer"]
offset_left = 31.0
offset_top = 225.0
offset_right = 976.0
offset_bottom = 464.0
rotation = -0.0576806
pivot_offset = Vector2(250, 75)
text = "Get close and make him taste your wrath"
label_settings = SubResource("LabelSettings_jk1al")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/IndicationText"]
libraries = {
"": SubResource("AnimationLibrary_jbrdi")
}
autoplay = "text_moving"

[node name="Timer" type="Timer" parent="CanvasLayer/IndicationText"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Slap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_u75in")
volume_db = -9.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1000
texture = ExtResource("11_v0uxk")

[node name="Throw" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_c8jtb")
volume_db = -6.0
max_polyphony = 3

[node name="YES" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_8r4jl")

[node name="NO" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_lfkss")

[connection signal="explode" from="Fighter" to="." method="_on_fighter_explode"]
[connection signal="area_entered" from="Baker" to="." method="_on_baker_area_entered"]
[connection signal="current_position" from="Baker-Patern" to="." method="_on_baker_patern_current_position"]
